--- a/tennis-web/src/asset/css/index.css
+++ b/tennis-web/src/asset/css/index.css
@@ -1,4 +1,20 @@
-.cards{
+@import url('https://fonts.googleapis.com/css2?family=Merriweather&display=swap');
+
+.cards {
+    width: 100%;
+    padding-top: 10px;
     display: grid;
     grid-template-columns: auto auto auto;
+}
+
+.videos {
+    height: 920px;
+    width: 100%;
+}
+
+.content-card {
+    width: 100%;
+    display: grid;
+    grid-template-columns: auto auto auto auto;
+    padding: 0px 5% 10px 5%;
 }
