Update Card component

--- a/tennis-web/src/components/Card/card.css
+++ b/tennis-web/src/components/Card/card.css
@@ -2,7 +2,7 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
-    font-family: "Poppins", sans-serif;
+    font-family: futura-pt;
 }
 
 .container {
@@ -39,6 +39,7 @@
     position: relative;
     width: 260px;
     height: 260px;
+    border-radius: 75px;
 
     top: -40%;
     left: 8px;
