--- a/tennis-web/src/asset/css/index.css
+++ b/tennis-web/src/asset/css/index.css
@@ -13,6 +13,60 @@
 .content-card {
     width: 100%;
     display: grid;
-    grid-template-columns: auto auto auto auto;
+    grid-template-columns: 25% 25% 25% 25%;
     padding: 0px 5% 10px 5%;
+}
+
+.about {
+    display: grid;
+    grid-template-columns: 40% 60%;
+    width: 100%;
+    padding: 50px 0;
+    border-top: 2px solid lightgray;
+}
+
+.about:before {
+    content: "";
+    position: absolute;
+    left: 25%;
+    bottom: 0;
+    height: 1px;
+    width: 50%;
+    border-bottom: 1px solid lightgray;
+}
+
+.avatar {
+    justify-self: center;
+    border-radius: 50%;
+}
+
+.avatar:hover {
+    transform: scale(1.2);
+    transition: 0.5s ease-in-out;
+}
+
+.about-content {
+    display: block;
+    padding-right: 15%;
+    text-align: flex-start;
+
+    font-family: futura-pt;
+}
+
+.about-content h2 {
+    font-weight: 900;
+    font-style: normal;
+    font-size: 42px;
+    letter-spacing: 1px;
+    text-transform: none;
+    line-height: 1.2em;
+}
+
+.about-content p {
+    font-weight: 400;
+    font-style: normal;
+    font-size: 20px;
+    letter-spacing: 1px;
+    text-transform: none;
+    line-height: 1em;
 }
