--- a/tennis-web/src/pages/styles/index.css
+++ b/tennis-web/src/pages/styles/index.css
@@ -32,7 +32,7 @@
     bottom: 0;
     height: 1px;
     width: 50%;
-    border-bottom: 1px solid lightgray;
+    border-bottom: 1px solid gray;
 }
 
 .avatar {
