on mouseout after hovering avatar

--- a/tennis-web/src/pages/styles/index.css
+++ b/tennis-web/src/pages/styles/index.css
@@ -38,6 +38,8 @@
 .avatar {
     justify-self: center;
     border-radius: 50%;
+    transform: scale(1);
+    transition: 0.5s ease;
 }
 
 .avatar:hover {
