update course page

--- a/tennis-web/src/pages/styles/course.css
+++ b/tennis-web/src/pages/styles/course.css
@@ -8,14 +8,16 @@
 }
 
 .video {
-    height: 920px;
-    width: 1920px;
+    height: 100%;
+    width: 100%;
     margin: 0 auto;
     align-items: center;
 }
 
 .section {
     padding-bottom: 20px;
+    width: 80%;
+    justify-self: center;
 }
 
 .section h2 {
@@ -31,11 +33,25 @@
     line-height: 1em;
 }
 
+.section h3 {
+    text-align: center;
+    padding-top: 5px;
+
+    font-family: futura-pt;
+    font-weight: 700;
+    font-style: normal;
+    font-size: 25px;
+    letter-spacing: 0.5px;
+    text-transform: none;
+    line-height: 1em;
+}
+
 .section h2:after {
     content: '';
     display: block;
     position: absolute;
     width: 50%;
     left: 25%;
+    padding-top: 10px;
     border-bottom: 2px solid gray;
 }
