--- a/tennis-web/src/pages/styles/course.css
+++ b/tennis-web/src/pages/styles/course.css
@@ -8,16 +8,16 @@
 }
 
 .video {
-    height: 100%;
+    height: 920px;
     width: 100%;
     margin: 0 auto;
     align-items: center;
+    padding-top: 20px;
 }
 
 .section {
     padding-bottom: 20px;
-    width: 80%;
-    justify-self: center;
+    width: 100%;
 }
 
 .section h2 {
