--- a/tennis-web/src/pages/styles/course.css
+++ b/tennis-web/src/pages/styles/course.css
@@ -1,57 +1,58 @@
 .video-container {
     display: grid;
-    grid-template-rows: max-content;
+    grid-template-columns: 300px auto 300px;
 
     width: 100%;
     padding-top: 20px;
+    position: inherit;
+}
+
+.course {
+    display: grid;
+    grid-template-columns: 50% 50%;
+
+    width: 100%;
+    height: 100%;
+    padding-top: 20px;
+    align-items: center;
     position: relative;
 }
 
+.img-container {
+    display: inline-block;
+    width:80%;
+    height:100%;
+
+    padding-top: 75px;
+    justify-self: center;
+}
+
+.img-card{
+    width: 100%;
+    height: 100%;
+}
+
+.content-container {
+    display:inline-block;
+
+    width: 80%;
+    height: 80%;
+    padding: 50px 0 0 0;
+
+    justify-self: center;
+    text-align: center;
+    align-items: center;
+    background-color: rgb(248, 240, 240);
+}
+
 .video {
-    height: 920px;
+    height: 750px;
     width: 100%;
     margin: 0 auto;
     align-items: center;
-    padding-top: 20px;
 }
 
 .section {
     padding-bottom: 20px;
     width: 100%;
-}
-
-.section h2 {
-    padding-top: 10px;
-    text-align: center;
-
-    font-family: futura-pt;
-    font-weight: 900;
-    font-style: normal;
-    font-size: 42px;
-    letter-spacing: 0.5px;
-    text-transform: none;
-    line-height: 1em;
-}
-
-.section h3 {
-    text-align: center;
-    padding-top: 5px;
-
-    font-family: futura-pt;
-    font-weight: 700;
-    font-style: normal;
-    font-size: 25px;
-    letter-spacing: 0.5px;
-    text-transform: none;
-    line-height: 1em;
-}
-
-.section h2:after {
-    content: '';
-    display: block;
-    position: absolute;
-    width: 50%;
-    left: 25%;
-    padding-top: 10px;
-    border-bottom: 2px solid gray;
 }
