--- a/tennis-web/src/components/Footer/Footer.css
+++ b/tennis-web/src/components/Footer/Footer.css
@@ -1,8 +1,9 @@
 .footer {
     background-color: #141414;
     position: absolute;
-    height: 130px;
+    height: 2.5rem;
     width: 100%;
+    bottom: 0;
 }
 
 .siteInfo {
