--- a/tennis-web/src/pages/styles/index.css
+++ b/tennis-web/src/pages/styles/index.css
@@ -10,19 +10,11 @@
     width: 100%;
 }
 
-.content-card {
-    width: 100%;
-    display: grid;
-    grid-template-columns: 25% 25% 25% 25%;
-    padding: 0px 5% 10px 5%;
-}
-
 .about {
     display: grid;
     grid-template-columns: 40% 60%;
     width: 100%;
     padding: 50px 0;
-    border-top: 2px solid lightgray;
 }
 
 .about:before {
@@ -71,4 +63,18 @@
     letter-spacing: 1px;
     text-transform: none;
     line-height: 1em;
+}
+
+.gallery {
+    display: flex;
+    width: 100%;
+    padding: 0 100px 100px;
+    height: 500px;
+    justify-content: center;
+}
+
+.page-container {
+    position: relative;
+    min-height: 100vh;
+    padding-bottom: 2.5rem;
 }
