--- a/tennis-web/src/pages/styles/index.css
+++ b/tennis-web/src/pages/styles/index.css
@@ -32,6 +32,8 @@
     border-radius: 50%;
     transform: scale(1);
     transition: 0.5s ease;
+    height: 260px;
+    width: 260px;
 }
 
 .avatar:hover {
@@ -69,7 +71,8 @@
     display: flex;
     width: 100%;
     padding: 0 100px 100px;
-    height: 500px;
+    height: auto;
+    min-height: 800px;
     justify-content: center;
 }
 
