--- a/tennis-web/src/pages/styles/index.css
+++ b/tennis-web/src/pages/styles/index.css
@@ -37,7 +37,7 @@
 }
 
 .avatar:hover {
-    transform: scale(1.2);
+    transform: scale(1.1);
     transition: 0.5s ease-in-out;
 }
 
@@ -68,10 +68,9 @@
 }
 
 .gallery {
-    display: flex;
     width: 100%;
     padding: 0 100px 100px;
-    height: auto;
+    height: max-content;
     min-height: 800px;
     justify-content: center;
 }
@@ -79,5 +78,51 @@
 .page-container {
     position: relative;
     min-height: 100vh;
-    padding-bottom: 2.5rem;
+    padding-bottom: 5rem;
+}
+
+.feedback {
+    display: grid;
+    grid-template-columns: 25% 50%;
+    padding: 20px 100px 30px 300px;
+    height: 300px;
+}
+
+.student {
+    display: flex;
+    justify-content: center;
+    border-right: 1px solid gray;
+    padding: 15px 0px;
+    background-color: aliceblue;
+    border-radius: 30px 0 0 30px;
+}
+
+.comment {
+    background-color: aliceblue;
+    padding-right: 30px;
+    border-radius: 0 30px 30px 0;
+}
+
+.comment h2 {
+    font-weight: 900;
+    font-style: normal;
+    font-size: 30px;
+    letter-spacing: 1px;
+    text-transform: none;
+    line-height: 1.2em;
+
+    padding-top: 10px;
+    text-align: end;
+}
+
+.comment p {
+    font-weight: 400;
+    font-style: normal;
+    font-size: 20px;
+    letter-spacing: 1px;
+    text-transform: none;
+    line-height: 1em;
+
+    padding: 20px 15px 0;
+    text-align: center;
 }
