--- a/tennis-web/src/pages/styles/course.css
+++ b/tennis-web/src/pages/styles/course.css
@@ -13,14 +13,14 @@
 
     width: 100%;
     height: 100%;
-    padding-top: 20px;
-    align-items: center;
+    padding: 20px 0 50px;
+    align-items: end;
     position: relative;
 }
 
 .img-container {
     display: inline-block;
-    width:80%;
+    width:60%;
     height:100%;
 
     padding-top: 75px;
@@ -36,13 +36,32 @@
     display:inline-block;
 
     width: 80%;
-    height: 80%;
-    padding: 50px 0 0 0;
+    height: 85%;
 
     justify-self: center;
-    text-align: center;
     align-items: center;
-    background-color: rgb(248, 240, 240);
+}
+
+.content-container h1 {
+    font-weight: 900;
+    font-style: normal;
+    font-size: 32px;
+    letter-spacing: 1px;
+    text-transform: none;
+    line-height: 1.2em;
+
+    padding-top: 25px;
+}
+
+.content-container p {
+    font-weight: 400;
+    font-style: normal;
+    font-size: 20px;
+    letter-spacing: 1px;
+    text-transform: none;
+    line-height: 1em;
+
+    padding: 20px 30px 0 0;
 }
 
 .video {
