update feedback section and course page

--- a/tennis-web/src/pages/styles/index.css
+++ b/tennis-web/src/pages/styles/index.css
@@ -70,8 +70,7 @@
 .gallery {
     width: 100%;
     padding: 0 100px 100px;
-    height: max-content;
-    min-height: 800px;
+    overflow: auto;
     justify-content: center;
 }
 
