--- a/tennis-web/src/pages/styles/course.css
+++ b/tennis-web/src/pages/styles/course.css
@@ -72,6 +72,10 @@
 }
 
 .section {
+    display: grid;
+    grid-template-columns: auto auto auto;
+    grid-template-rows: auto;
+    grid-row-gap: 10px;
     padding-bottom: 20px;
     width: 100%;
 }
