--- a/tennis-web/src/pages/styles/contact.css
+++ b/tennis-web/src/pages/styles/contact.css
@@ -4,6 +4,14 @@
   grid-template-rows: 1fr 1fr;
 }
 
+.contact-us {
+  width: 120px;
+  height: 120px;
+  border-radius: 5px;
+  /* половина ширины и высоты */
+  margin: 20px 0;
+}
+
 .contact-section,
 .map-section {
   display: grid;
@@ -11,8 +19,10 @@
 }
 
 .left-content {
-  margin-left:50%;
+  margin-left: 50%;
   padding: 50px 0;
+  display: flex;
+  flex-direction: column;
 }
 
 
